--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
       - GOOGLE_SHEETS_CREDENTIALS_FILE=/app/credentials.json
     volumes:
       - ./english_learning.db:/app/english_learning.db
-      - ./python-datalens-f6500fa9f949.json:/app/credentials.json:ro
+      - ./credentials.json:/app/credentials.json:ro
     command: ["uv", "run", "-m", "src.telegram_bot"]
 
