Улучшения: мягкая оценка, взвешенный выбор фраз, Docker оптимизация
- Мягкая система оценки: грамматика и пунктуация не влияют на балл
- Фокус на понимании смысла фразы (60% веса)
- Взвешенный выбор фраз с приоритетом новых слов
- Обновлена синхронизация с Google Sheets для сохранения даты добавления
- Упрощен Dockerfile (убрана зависимость от uv)
- Добавлены .dockerignore и скрипты для Docker
- Обновлена документация

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - GOOGLE_SHEETS_CREDENTIALS_FILE=/app/credentials.json
     volumes:
       - ./english_learning.db:/app/english_learning.db
-      - ./credentials.json:/app/credentials.json:ro
-    command: ["uv", "run", "-m", "src.telegram_bot"]
+      - ./python-datalens-f6500fa9f949.json:/app/credentials.json:ro
+      - ./logs:/app/logs
+    command: ["python", "-m", "src.telegram_bot"]
 
