Исправлены падения бота: сохранение состояния в БД, ограничения памяти, улучшенная обработка ошибок

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,10 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
+
+# Credentials files
+zerocoder-*.json
+python-datalens-*.json
 
 # Виртуальные окружения
 .env
